--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "custom-api-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "moacha --exit",
+    "start": "nodemon src/server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
